# llm-code-deployment

./: .env.dev  .gitignore  Dockerfile  README.md  app.py  celery_app.py  config.py  logger.py  model.py  pyproject.toml  requirements.txt  routes.py  services.py  tasks.py
.github/workflows/: check_file_size_for_hf.yml  sync_to_huggingface_hub.yml
app/: celery_app.py  main.py
app/core/: config.py  logger.py
app/routes/: routes.py
app/services/: __init__.py  services.py
app/tasks/: tasks.py
