[project]
name = "sample-celery"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "celery-types==0.23.0",
    "fastapi[standard]>=0.119.0",
    "gevent>=25.9.1",
    "openai>=2.4.0",
    "pydantic-settings>=2.11.0",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
]
